opam-version: "1.2"
name: "slirp-exe"
version: "0.0.0"
maintainer: "David Scott <dave.scott@docker.com>"
authors: [ "David Scott <dave.scott@docker.com>" ]

build: [
  [make "com.docker.slirp.exe"]
]
build-test: [
  [make "test"]
]
install: [make "install"]
remove: [make "uninstall"]

depends: [
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "oasis" {build}
  "result"
  "ipaddr"
  "lwt"
  "ofs"
  "hostnet"
  "cmdliner"
  "logs"
  "fmt"
  "proto-vmnet"
  "named-pipe"
  "hvsock"
  "win-eventlog"
  "ounit" {test}
  "alcotest" {test}
]
