opam-version: "1.2"
maintainer: "David Scott <dave.scott@docker.com>"
authors: [
  "Anil Madhavapeddy <anil@recoil.org>"
  "David Scott <dave.scott@docker.com>"
  "David Sheets <dsheets@docker.com>"
  "Gaetan de Villele <gdevillele@gmail.com>"
  "Ian Campbell <ian.campbell@docker.com>"
  "Magnus Skjegstad <magnus@skjegstad.com>"
  "Mindy Preston <mindy.preston@docker.com>"
  "Sebastiaan van Stijn <github@gone.nl>"
  "Thomas Gazagnaire <thomas@gazagnaire.com>"
  "Thomas Leonard <thomas.leonard@docker.com>"
]
homepage:     "https://github.com/moby/vpnkit"
bug-reports:  "https://github.com/moby/vpnkit/issues"
dev-repo:     "https://github.com/moby/vpnkit.git"
doc:          "https://moby.github.io/vpnkit/"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build}
  "alcotest"
  "ounit"
  "result"
  "tar" {>= "1.0.1"}
  "ipaddr" {= "5.0.1"}
  "lwt" {= "5.4.0"}
  "uwt" {>= "0.0.4"}
  "tcpip" {= "6.1.0"}
  "base64" {>= "3.5.0"}
  "cstruct" {= "5.2.0"}
  "pcap-format" {>= "0.4.0"}
  "cmdliner"
  "charrua" {>= "1.3.0"}
  "charrua-client"
  "charrua-server"
  "hvsock" {>= "2.0.0"}
  "fd-send-recv" {>= "2.0.0"}
  "logs"
  "fmt"
  "astring"
  "arp" {= "2.3.1"}
  "mirage-device" {= "2.0.0"}
  "mirage-kv" {= "3.0.1"}
  "mirage-net" {= "3.0.1"}
  "mirage-time" {= "2.0.1"}
  "mirage-protocols" {>= "4.0.1"}
  "mirage-channel" {>= "4.0.1"}
  "cohttp-lwt" {>= "0.99.0"}
  "protocol-9p" {>= "2.0.0"}
  "mirage-vnetif" {>= "0.5.0"}
  "io-page-unix"
  "uuidm"
  "ezjsonm"
  "sha"
  "stringext"
  "mirage-clock" {= "3.1.0"}
  "mirage-clock-unix" {= "3.1.0"}
  "mirage-random" {= "2.0.0"}
  "mirage-random-stdlib"
  "re" {= "1.9.0"}
  "uri" {= "4.1.0"}
]
