opam-version: "2.0"
maintainer: "David Scott <dave.scott@docker.com>"
authors: [
  "Anil Madhavapeddy <anil@recoil.org>"
  "David Scott <dave.scott@docker.com>"
  "David Sheets <dsheets@docker.com>"
  "Gaetan de Villele <gdevillele@gmail.com>"
  "Ian Campbell <ian.campbell@docker.com>"
  "Magnus Skjegstad <magnus@skjegstad.com>"
  "Mindy Preston <mindy.preston@docker.com>"
  "Sebastiaan van Stijn <github@gone.nl>"
  "Thomas Gazagnaire <thomas@gazagnaire.com>"
  "Thomas Leonard <thomas.leonard@docker.com>"
]
homepage:     "https://github.com/moby/vpnkit"
bug-reports:  "https://github.com/moby/vpnkit/issues"
dev-repo: "git+https://github.com/moby/vpnkit.git"
doc:          "https://moby.github.io/vpnkit/"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml"
  "dune" {build & = "3.0.3"}
  "alcotest" {with-test}
  "ounit" {with-test}
  "result" {= "1.5"}
  "tar" {= "2.0.1"}
  "ipaddr" {= "5.3.0"}
  "lwt" {= "5.5.0"}
  "uwt" {= "0.3.3"}
  "tcpip" {= "7.1.0"}
  "base64" {= "3.5.0"}
  "cstruct" {= "6.0.1"}
  "pcap-format" {= "0.5.2"}
  "cmdliner" {= "1.0.4"}
  "charrua" {= "1.5.0"}
  "charrua-client" {= "1.5.0"}
  "charrua-server" {= "1.5.0"}
  "hvsock" {= "3.0.0"}
  "fd-send-recv" {= "2.0.1"}
  "logs" {= "0.7.0"}
  "fmt" {= "0.9.0"}
  "astring" {= "0.8.5"}
  "ethernet" {= "3.0.0"}
  "arp" {= "3.0.0"}
  "mirage-entropy" {= "0.5.0"}
  "mirage-kv" {= "4.0.1"}
  "mirage-net" {= "4.0.0"}
  "mirage-time" {= "3.0.0"}
  "mirage-channel" {= "4.0.1"}
  "mirage-stack" {= "4.0.0"}
  "cohttp-lwt" {= "5.0.0"}
  "protocol-9p" {= "2.0.2"}
  "mirage-vnetif" {= "0.6.0"}
  "io-page-unix" {= "2.3.0"}
  "uuidm" {= "0.9.7"}
  "ezjsonm" {= "1.3.0"}
  "sha" {= "1.15.2"}
  "stringext" {= "1.6.0"}
  "mirage-clock" {= "4.2.0"}
  "mirage-clock-unix" {= "4.2.0"}
  "mirage-random" {= "3.0.0"}
  "mirage-random-stdlib" {= "0.1.0"}
  "re" {= "1.10.3"}
]
synopsis: "VPN-friendly networking devices for HyperKit"
description: """
HyperKit is a hypervisor which runs on macOS using the "hypervisor.framework".
VPNKit implements a virtual ethernet device for HyperKit VMs in a VPN-friendly
way, by terminating and proxying all the TCP flows, caching and forwarding
DNS requests etc. HyperKit and VPNKit are used in Docker for Mac and Windows."""
